# streamer_svc

./: CMakeLists.txt  LICENSE  README.md  streaming_svcdb.sqlite
root/src/: login.html  player.html  userlist.html  wrapper.html
root/static/css/: .directory  app.css  player.css
root/static/js/: app.js
src/: CMakeLists.txt  authenticatedstatic.cpp  authenticatedstatic.h  authstoresql.cpp  authstoresql.h  dummyview.cpp  dummyview.h  login.cpp  login.h  logout.cpp  logout.h  root.cpp  root.h  sql_helper.cpp  sql_helper.h  streaming_svc.cpp  streaming_svc.h  users.cpp  users.h
